<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>eu.europeana</groupId>
        <artifactId>europeana-parent-pom</artifactId>
        <version>2.4</version>
    </parent>

    <artifactId>corelib</artifactId>
    <version>2.17.8-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Core Library</name>
    <description>Europeana Core Library with common functionality for Search and Record API</description>
    <organization>
        <url>http://www.europeana.eu</url>
        <name>Europeana Foundation</name>
    </organization>

    <modules>
        <module>corelib-definitions</module>
        <module>corelib-record</module>
        <module>corelib-schemaorg</module>
        <module>corelib-search</module>
        <module>corelib-storage</module>
        <module>corelib-utils</module>
        <module>corelib-web</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:europeana/corelib.git</connection>
        <developerConnection>scm:git:git@github.com:europeana/corelib.git</developerConnection>
        <url>https://github.com/europeana/corelib</url>
    </scm>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Old metis Mongo classes are moved to metis-common-->
        <metis.common.version>20-SNAPSHOT</metis.common.version>
        <metis.schema.version>15-SNAPSHOT</metis.schema.version>

        <apacheSolr.version>8.11.4</apacheSolr.version>
        <apacheLucene.version>8.11.4</apacheLucene.version>
       <!--Morphia 2.5.x requires MongoDB Java Driver 5.x. It is not compatible with driver 4.11.x.
         Otherwise there will be version mismatch between MongoDB Java driver libraries.
        You should not declare only mongodb-driver-core yourself when using Morphia.
        Morphia expects the complete MongoDB Java driver stack.-->
<!--        <mongoDriver.version>4.11.4</mongoDriver.version>-->
        <morphia.version>2.5.1</morphia.version>

        <commonsIO.version>2.17.0</commonsIO.version>

        <!-- Dependencies below are also used in API2 -->
        <commonsLang3.version>3.17.0</commonsLang3.version>
        <httpclient.version>4.5.14</httpclient.version>
        <jackson.version>2.18.0</jackson.version>
        <jodatime.version>2.13.0</jodatime.version>
        <log4j2.version>2.25.4</log4j2.version>
        <springBoot.version>1.3.8.RELEASE</springBoot.version>
        <springCore.version>5.3.26</springCore.version>

        <junit.version>4.13.2</junit.version>
        <mockito.version>3.12.4</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-definitions</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-record</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-search</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-storage</artifactId>
                <version>2.17.8-SNAPSHOT</version>


            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-utils</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-web</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>eu.europeana.corelib</groupId>
                <artifactId>corelib-schemaorg</artifactId>
                <version>2.17.8-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <!--Release repositories-->
        <repository>
            <id>libs-release</id>
            <name>libs-release</name>
            <url>https://artifactory-prod.eanadev.org/artifactory/libs-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>libs-snapshot</id>
            <name>libs-snapshot</name>
            <url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot-local</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

<!--    <build>-->
<!--        <plugins>-->
<!--            &lt;!&ndash; This will be active when running the verify or install goal-->
<!--                 To skip (e.g. during debugging) use 'mvn clean package')&ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.owasp</groupId>-->
<!--                <artifactId>dependency-check-maven</artifactId>-->
<!--                <version>10.0.0</version>-->
<!--                <configuration>-->
<!--                    <nvdApiKey>removed</nvdApiKey>-->
<!--                    <knownExploitedUrl>https://artifactory.eanadev.org/artifactory/ext-release-local/gov/cisa/www/known_exploited_vulnerabilities.json</knownExploitedUrl>-->
<!--                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>-->
<!--                    <failBuildOnCVSS>9</failBuildOnCVSS>-->
<!--                    <suppressionFiles>-->
<!--                        <suppressionFile>owasp-suppress-corelib.xml</suppressionFile>-->
<!--                    </suppressionFiles>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--        </plugins>-->
<!--    </build>-->

</project>
